--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">My Application</string>
     <string name="ok">confirm</string>
     <string name="hello">\hello world\</string>
-    <string name="sms">尊敬的%2$s,您当月的话费是</string>
+    <string name="sms">尊敬的%2$s,您当月的话费是%1$d元。</string>
 </resources>
